objects/Q9__Metadata_Item__c.object
<CustomObject>
    <description>Data related to specific metadata items processed by Elements on the Salesforce platform.</description>
    <fields>
        <fullName>Q9__Encoded_FullName__c</fullName>
        <description>The URI-encoded fullName. Needed for the readMetadata() call.</description>
        <inlineHelpText>The URI-encoded fullName. Needed for the readMetadata() call.</inlineHelpText>
        <label>Encoded FullName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__Hash__c</fullName>
        <description>Hashed value of the xml or json representation of a metadata item. Used for change detection when LastModifiedDate is not reliable.</description>
        <inlineHelpText>Hashed value of the xml or json representation of a metadata item. Used for change detection when LastModifiedDate is not reliable.</inlineHelpText>
        <label>Hash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q9__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true if the profile previously existed, but has since been deleted</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q9__Is_Too_Large_To_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the readMetadata() callout for this Profile exceeded the 120s (2min) max.</description>
        <inlineHelpText>If true, the readMetadata() callout for this Profile exceeded the 120s (2min) max.</inlineHelpText>
        <label>Is Too Large To Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q9__Last_Modified_Datetime__c</fullName>
        <description>Datetime that the Profile was last modified.</description>
        <inlineHelpText>Datetime that the Profile was last modified.</inlineHelpText>
        <label>Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q9__Last_Saved_Datetime__c</fullName>
        <description>Date/Time that the Profile metadata was retrieved and saved.</description>
        <inlineHelpText>Date/Time that the Profile metadata was retrieved and saved.</inlineHelpText>
        <label>Last Saved Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q9__Metadata_Type__c</fullName>
        <description>The metadata item&apos;s metadata type.</description>
        <inlineHelpText>The metadata item&apos;s metadata type.</inlineHelpText>
        <label>Metadata Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q9__Salesforce_Id__c</fullName>
        <description>The item&apos;s Salesforce Id.</description>
        <inlineHelpText>The item&apos;s Salesforce Id.</inlineHelpText>
        <label>Salesforce Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Metadata Item</label>
    <nameField>
        <displayFormat>ITEM-{0000000}</displayFormat>
        <label>Metadata Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>